--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,9 @@
     "version": 2,
     "builds": [
       {
-        "src": "vite.config.ts",
-        "use": "@vercel/static-build"
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": { "distDir": "dist" }
       }
     ],
     "routes": [
